testdata/assign/errors.lox
(a) = 1; // error: line 1 at '=': invalid target for assignment: want variable or get expression, got lox.GroupingExpr
